improve layout of compare editor in git page (use css classes, fix focus ring cut off in actions, add padding to right of the compare editor to balance with left side)

--- a/bundles/org.eclipse.orion.client.git/web/git/css/git.css
+++ b/bundles/org.eclipse.orion.client.git/web/git/css/git.css
@@ -298,6 +298,17 @@ table .sectionTable {
 	margin-top: 3px;
 }
 
+.gitChangeListCompare {
+	height: 420px;
+	border: 1px solid lightgray;
+	margin-right: 10px;
+}
+
+.gitChangeListCompareActions {
+	overflow: hidden;
+	padding: 5px;
+}
+
 .gitCommitInfoValue {
 	color: black;
 }
