--- a/bundles/org.eclipse.orion.client.ui/web/css/images.css
+++ b/bundles/org.eclipse.orion.client.ui/web/css/images.css
@@ -199,7 +199,6 @@
 	color: #777;
 	font-family: 'Orion Icon Font';
 	padding: 0;
-	padding-left:5px;
 	background: none;
 	border: none;
 	margin: 0;
@@ -214,7 +213,6 @@
 	color: #777;
 	font-family: 'Orion Icon Font';
 	padding: 0;
-	padding-left:5px;
 	background: none;
 	border: none;
 	margin: 0;
